style: fix auth background uniformity, remove 0.8 zoom and fix create room dialog overflow

--- a/src/index.css
+++ b/src/index.css
@@ -177,7 +177,6 @@ All colors MUST be HSL.
     overflow-x: hidden;
     position: relative;
     width: 100%;
-    zoom: 0.8;
   }
 
   /* Fix iOS input zoom */
